--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.netlify 
 
 # testing
 /coverage
@@ -23,3 +24,5 @@ yarn-debug.log*
 yarn-error.log*
 
 .vscode
+# Local Netlify folder
+.netlify
