--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "dotenv": "^8.2.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
